public/style.css
/*Nav Bar*/
body {
  padding-top: 70px;
}

.navbar-brand {
  font-family: "Roboto", serif;
}

#navigation {
  background-color: #F8F0F1;
}

/*Content*/
.companyname {
  font-size: 6em;
}
#header, #services, #instagramcounter, #contactus {
  margin-bottom: 5em;
}

#header {
  max-width: inherit;
  z-index: inherit;
  position: relative;
  width: 100%;
  height: 100%;
  background: url(/images/background-image-min.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 300px 0;
  margin-top: -2em;
}

.content {
  padding-bottom: 1em;
}

.title {
  color: white;
  text-shadow: 4px 4px 8px black;
  margin-top: -5em;
  width: 55%;
  background-color: rgba(0, 0, 0,0.5);
  margin-right: auto;
  margin-left: auto;
  padding: 1em 0;
}

.title h1, h3 {
  font-family: "Roboto", serif;
}

#services, #instagramcounter, #contactus {
  font-family: "Roboto", serif;
}

#instagramcounter {
  background-color: rgba(52, 152, 219, 0.5);
}

#contactus {
  margin-top: 10em;
  margin-bottom: 10em;
}

/*Counter*/
.counter {
  font-weight: bold;
}

/* Modal Content/Box */
#referral-form, #invite-form {
  font-family: "Roboto", serif;
}
#contained-modal-title-sm {
  font-family: "Roboto", serif;
  text-align: center;
}
#referral-form h3, #invite-form h3 {
  margin-top: 1em;
  font-family: "Play ball", cursive;
  font-size: 3em;
}
#referral-form div, #invite-form div {
  padding-bottom: 0.5em;
}
#referral-form input, #invite-form input {
  width: 15em;
}
#errorMessage {
  color: red;
}

/*Buttons*/
#forms {
  width: 25%;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: 5em;
}
#forms Button {
  margin-right: 0.75em;
}
#referral-button {
  color: #fff;
  background: #3498DB;
  border-color: #2E86C1;
  text-shadow: none;
}
#invite-button {
  color: #fff;
  background: #E74C3C;
  border-color: #F4503F;
  text-shadow: none;
}
#submit {
  color: #fff;
  background: #E74C3C;
  border-color: #F4503F;
  margin-bottom: 1em;
}

/*Footer*/
footer {
  bottom: 0px;
  width: 100%;
}

